Change Home footer text content

--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
 
 <!-- Home footer -->
 <div class="container d-flex col-xxl-10 px-4 py-5 border-top border-bottom justify-content-center">
-    <p class="col-9 display-5 fw-bold text-center text-secondary">Našim cílem je
-        <blue>Vás naučit efektivně plavat všechny plavecké způsoby</blue>
-        s minimálním výdejem energie
-    </p>
+     <p class="col-9 display-5 fw-bold text-center text-secondary">
+        <blue>Naší vizí je Vás</blue>, naše klienty, <blue>naučit</blue> správně a efektivně <blue>plavat</blue>.
+     </p>
 </div>
 
 <!-- About -->
