--- a/index.html
+++ b/index.html
@@ -250,19 +250,78 @@
 
 <!-- Services footer -->
 <div class="container col-xxl-10 px-4 py-5 border-bottom">
-    <p class="display-5 py-3 fw-bold text-center">Proč zvolit právě nás?</p>
-    <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
+    <p class="display-5 pt-3 pb-0 fw-bold text-center">Proč zvolit právě nás?</p>
+        <div class="row g-4 py-3 pt-5 row-cols-1 row-cols-lg-3">
         <div class="feature col">
-            <h2 class="text-muted py-3">Moderní přístup</h2>
-            <p>Sportovní trénink v oblasti plavání založený na moderních poznatcích ze světa plavání a podpořený mnohaletou praxí</p>
+            <h3 class="text-muted py-3">Moderní přístup</h3>
+            <p class="text-muted">Sportovní trénink v oblasti plavání založený na moderních poznatcích ze světa plavání a podpořený mnohaletou praxí</p>
         </div>
         <div class="feature col">
-            <h2 class="text-muted py-3">Udržitelné výsledky</h2>
-            <p>Respektujeme Vaši individualitu na základě které, nastavíme nejvhodnější typ tréninku pro dlouhodobě udržitelné výsledky</p>
+            <h3 class="text-muted py-3">Udržitelné výsledky</h3>
+            <p class="text-muted">Respektujeme Vaši individualitu na základě které, nastavíme nejvhodnější typ tréninku pro dlouhodobě udržitelné výsledky</p>
         </div>
         <div class="feature col">
-            <h2 class="text-muted py-3">Flexibilita a nezávislost</h2>
-            <p>Působíme ve třech městech v ČR a proto není takřka problém vyhovět vaším individuálním požadavkům</p>
+            <h3 class="text-muted py-3">Flexibilita a nezávislost</h3>
+            <p class="text-muted">Působíme ve třech městech v ČR a proto není takřka problém vyhovět vaším individuálním požadavkům</p>
+        </div>
+    </div>
+</div>
+<!-- References -->
+<div class="container col-xxl-10 px-4 py-5 border-bottom">
+    <p class="display-5 pt-3 pb-0 fw-bold text-center">Jak to vidí naši klienti?</p>
+    <div class="row">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item pt-5 active">
+                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <rect width="100%" height="100%" fill="transparent"></rect>
+                </svg>
+                <div class="container">
+                    <div class="carousel-caption text-start">
+                        <p class="font-italic text-black">"Dobrý deň, chcel by som uplatniť voucher na 3 lekcie,
+                        už som si jeden voucher kupoval a páčilo sa mi, s
+                        trénerom Honzom v Brně si dohodnem detaily lekcií."</p>
+                        <p class="text-muted">Petr M.</p>
+                    </div>
+                </div>
+                </div>
+              <div class="carousel-item pt-5">
+                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <rect width="100%" height="100%" fill="transparent"></rect>
+                </svg>
+                <div class="container">
+                  <div class="carousel-caption text-start">
+                        <p class="font-italic text-black">"Moc děkuju za tréninky, jsou super a moc mě to baví!
+                            Vždycky hezky zvednou náladu a těším se zas na další, děkuju!"</p>
+                        <p class="text-muted">Barbora K.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item pt-5">
+                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <rect width="100%" height="100%" fill="transparent"></rect>
+                </svg>
+                <div class="container">
+                  <div class="carousel-caption text-start">
+                        <p class="font-italic text-black">"Zdravím, moc děkuji za dnešní hodinu, bylo to super!!!"</p>
+                        <p class="text-muted">Petr V.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
 </div>
