--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="col-lg-7 p-0">
-            <img src="static/images/home_photo.webp" class="img-fluid rounded-3 mb-4 section-image" title="Úvodní foto"
+            <img src="static/images/home_photo.webp" class="img-fluid rounded-5 mb-4 section-image" title="Úvodní foto"
                  alt="Úvodní foto" loading="lazy">
         </div>
     </div>
@@ -126,7 +126,7 @@
 <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6">
-            <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-3 shadow-lg section-image"
+            <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
                  title="Trenér plavání Dominik Vavrečka" alt="Trenér plavání Dominik Vavrečka" loading="lazy">
         </div>
         <div class="col-lg-6">
@@ -278,39 +278,62 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item pt-5 active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="transparent"></rect>
-                </svg>
                 <div class="container">
-                    <div class="carousel-caption text-start">
-                        <p class="font-italic text-black">"Dobrý deň, chcel by som uplatniť voucher na 3 lekcie,
-                        už som si jeden voucher kupoval a páčilo sa mi, s
-                        trénerom Honzom v Brně si dohodnem detaily lekcií."</p>
-                        <p class="text-muted">Petr M.</p>
+                    <div class="carousel-caption row flex-lg-row align-items-center g-5 justify-content-center pt-0">
+                        <div class="col-lg-6 p-5 align-content-start mt-0 justify-content-between">
+                            <p class="font-italic text-black">"V Lekcích s Dominikem pokračuji a našla jsem si díky
+                                nim nový koníček a činnost, na kterou se vždy těším. Tréninky jsou pestré, zábavné a
+                                „ušité na míru“. Řešíme techniku, správnost provedení, zlepšujeme fyzickou kondici a
+                                z tréninku vždy odcházím spokojená. K dosažení lepších výsledků napomáhá kromě
+                                srozumitelného a trpělivého vysvětlování i rozbor plaveckých videí či využití
+                                různorodých pomůcek. Další výhodou je rychlá a flexibilní domluva, která vždy
+                                umožňuje trénink i při nepravidelném školním rozvrhu."</p>
+                            <p class="text-muted ref-name">Bára K. 25</p>
+                        </div>
+                        <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
+                            <img src="static/images/bara.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                                 title="Bara K Foto"
+                                 alt="Bara K Foto" loading="lazy">
+                        </div>
                     </div>
                 </div>
-                </div>
-              <div class="carousel-item pt-5">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="transparent"></rect>
-                </svg>
+              </div>
+                <div class="carousel-item pt-5">
                 <div class="container">
-                  <div class="carousel-caption text-start">
-                        <p class="font-italic text-black">"Moc děkuju za tréninky, jsou super a moc mě to baví!
-                            Vždycky hezky zvednou náladu a těším se zas na další, děkuju!"</p>
-                        <p class="text-muted">Barbora K.</p>
-                  </div>
+                    <div class="carousel-caption row flex-lg-row align-items-center g-5 justify-content-center pt-0">
+                        <div class="col-lg-6 p-5 align-content-start mt-0 justify-content-between">
+                            <p class="font-italic text-black">"Dnešní trénink byl super. Jsem nadšená. Lucka taky.
+                                Určo budeme dále pokračovat. Jestli tě můžu poprosit, tak mi prosím pošli ty
+                                podvodní videa - chci se ještě mrknout. Děkuju!"</p>
+                            <p class="text-muted ref-name">Eva S.</p>
+                        </div>
+                        <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
+                            <img src="static/images/eva.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                                 title="Eva S Foto"
+                                 alt="Eva S Foto" loading="lazy">
+                        </div>
+                    </div>
                 </div>
               </div>
-              <div class="carousel-item pt-5">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="transparent"></rect>
-                </svg>
+                <div class="carousel-item pt-5">
                 <div class="container">
-                  <div class="carousel-caption text-start">
-                        <p class="font-italic text-black">"Zdravím, moc děkuji za dnešní hodinu, bylo to super!!!"</p>
-                        <p class="text-muted">Petr V.</p>
-                  </div>
+                    <div class="carousel-caption row flex-lg-row align-items-center g-5 justify-content-center pt-0">
+                        <div class="col-lg-6 p-5 align-content-start mt-0 justify-content-between">
+                            <p class="font-italic text-black">"Během 3 tréninků jsem díky Dominikovi pochopil klíčové
+                                chyby, které dělám při svém plavání, a povedlo se mi je částečně odbourat.
+                                Hodiny se přizpůsobovaly tomu, na kterých stylech jsem chtěl pracovat, trenér
+                                používal různé plavecké pomůcky a video, což mi hodně pomáhalo, abych se mohl
+                                soustředit na tu konkrétní část pohybu, ve kterém dělám chybu.
+                                S Dominikem byla skvělá dohoda a nebyl problém si domluvit hodiny tak, abych
+                                stíhal svoje pracovní povinnosti. Obecně mi jeho přístup přišel super."</p>
+                            <p class="text-muted ref-name">Tadeáš V. 26</p>
+                        </div>
+                        <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
+                            <img src="static/images/tadeas.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                                 title="Tades V Foto"
+                                 alt="Tades V Foto" loading="lazy">
+                        </div>
+                    </div>
                 </div>
               </div>
             </div>
