Add new references

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava nebo Online">
     <meta name="twitter:image" content="https://www.elementswimming.cz/static/images/home_photo.webp">
 
-    <link rel="icon" href="static/images/logo_icon.png">
+    <link rel="icon" href="static/images/icons/logo_icon.png">
     <link rel="canonical" href="https://www.elementswimming.cz/index.html"/>
-    <link rel="apple-touch-icon" href="static/images/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" href="static/images/icons/apple-touch-icon-144x144.png">
     <!-- Bootstrap core CSS -->
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -48,14 +48,14 @@
             }
         }
     </style>
-    <link rel="preload" href="static/general.css" as="style"/>
-    <link rel="preload" href="static/headers.css" as="style"/>
-    <link rel="preload" href="static/heroes.css" as="style"/>
-    <link rel="preload" href="static/features.css" as="style"/>
-    <link href="static/general.css" rel="stylesheet"/>
-    <link href="static/headers.css" rel="stylesheet"/>
-    <link href="static/heroes.css" rel="stylesheet"/>
-    <link href="static/features.css" rel="stylesheet"/>
+    <link rel="preload" href="static/css/general.css" as="style"/>
+    <link rel="preload" href="static/css/headers.css" as="style"/>
+    <link rel="preload" href="static/css/heroes.css" as="style"/>
+    <link rel="preload" href="static/css/features.css" as="style"/>
+    <link href="static/css/general.css" rel="stylesheet"/>
+    <link href="static/css/headers.css" rel="stylesheet"/>
+    <link href="static/css/heroes.css" rel="stylesheet"/>
+    <link href="static/css/features.css" rel="stylesheet"/>
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -78,7 +78,7 @@
 <div class="container smart-scroll header-container">
     <header class="d-flex flex-wrap justify-content-center py-3 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-            <img src="static/images/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - Menu" class="bi me-2" width="54" height="36"/>
+            <img src="static/images/main/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - Menu" class="bi me-2" width="54" height="36"/>
             <span class="fs-4">Element swimming</span>
         </a>
 
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="col-lg-7 p-0">
-            <img src="static/images/home_photo.webp" class="img-fluid rounded-5 mb-4 section-image" title="Úvodní foto"
+            <img src="static/images/main/home_photo.webp" class="img-fluid rounded-5 mb-4 section-image" title="Úvodní foto"
                  alt="Úvodní foto" loading="lazy">
         </div>
     </div>
@@ -126,7 +126,7 @@
 <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6">
-            <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
+            <img src="static/images/main/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
                  title="Trenér plavání Dominik Vavrečka" alt="Trenér plavání Dominik Vavrečka" loading="lazy">
         </div>
         <div class="col-lg-6">
@@ -154,23 +154,23 @@
 <div class="container col-xxl-10 px-4 border-bottom" id="cooperation">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-3 align-items-center fill justify-content-center">
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.kpsostrava.cz">
-            <img src="static/images/kpsos.webp" title="Klub Plaveckých Sportů Ostrava, KPSOS" alt="Klub Plaveckých Sportů Ostrava, KPSOS - Logo" class="bi me-2"
+            <img src="static/images/cooperation/kpsos.webp" title="Klub Plaveckých Sportů Ostrava, KPSOS" alt="Klub Plaveckých Sportů Ostrava, KPSOS - Logo" class="bi me-2"
                  width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.vsc.cz">
-            <img src="static/images/victoria.webp" title="Vysokoškolské sportovní centrum Ministerstva školství, mládeže a tělovýchovy, Victoria"
+            <img src="static/images/cooperation/victoria.webp" title="Vysokoškolské sportovní centrum Ministerstva školství, mládeže a tělovýchovy, Victoria"
                  alt="Vysokoškolské sportovní centrum Ministerstva školství, mládeže a tělovýchovy, Victoria - Logo" class="bi me-2" width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.sportgym-ostrava.cz">
-            <img src="static/images/sportgym_ostrava.webp" title="Sportovní gymnázium Dany a Emila Zátopkových Ostrava"
+            <img src="static/images/cooperation/sportgym_ostrava.webp" title="Sportovní gymnázium Dany a Emila Zátopkových Ostrava"
                  alt="Sportovní gymnázium Dany a Emila Zátopkových Ostrava - Logo" class="bi me-2" width="150"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.czechswimming.cz">
-            <img src="static/images/csps.webp" title="Český Svaz Plaveckých Sportů"
+            <img src="static/images/cooperation/csps.webp" title="Český Svaz Plaveckých Sportů"
                  alt="Český Svaz Plaveckých Sportů - Logo" class="bi me-2" width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.fitnessclinic.cz">
-            <img src="static/images/fitness_clinic.webp" title="Fitness Clinic"
+            <img src="static/images/cooperation/fitness_clinic.webp" title="Fitness Clinic"
                  alt="Fitness Clinic - Logo" class="bi me-2" width="200"/>
         </a>
     </div>
@@ -192,7 +192,7 @@
     <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
         <div class="col">
             <button id="prague" type="button" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#PragueModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/prague.webp');">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/prague.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold no-decoration text-start">Praha</h2>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -206,7 +206,7 @@
 
         <div class="col">
             <button id="brno" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#BrnoModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/brno.webp');">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/brno.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Brno</h2>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -220,7 +220,7 @@
 
         <div class="col">
             <button id="ostrava" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OstravaModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/ostrava.jpg');">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/ostrava.jpg');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Ostrava</h2>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -234,7 +234,7 @@
 
         <div class="col">
             <button id="online" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#OnlineModal">
-                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/online.webp');">
+                <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/online.webp');">
                     <div class="d-flex flex-column h-100 p-5 mt-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Online</h2>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -272,9 +272,11 @@
     <div class="row">
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-label="Slide 1" class="active" aria-current="true"></button>
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
-              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4" class=""></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4" aria-label="Slide 5" class=""></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item pt-5 active">
@@ -291,7 +293,7 @@
                             <p class="text-muted ref-name">Bára K. 25</p>
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
-                            <img src="static/images/bara.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                            <img src="static/images/references/bara.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Bara K Foto"
                                  alt="Bara K Foto" loading="lazy">
                         </div>
@@ -308,7 +310,7 @@
                             <p class="text-muted ref-name">Eva S.</p>
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
-                            <img src="static/images/eva.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                            <img src="static/images/references/eva.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Eva S Foto"
                                  alt="Eva S Foto" loading="lazy">
                         </div>
@@ -329,7 +331,47 @@
                             <p class="text-muted ref-name">Tadeáš V. 26</p>
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
-                            <img src="static/images/tadeas.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                            <img src="static/images/references/tadeas.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                                 title="Tades V Foto"
+                                 alt="Tades V Foto" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+              </div>
+                <div class="carousel-item pt-5">
+                <div class="container">
+                    <div class="carousel-caption row flex-lg-row align-items-center g-5 justify-content-center pt-0">
+                        <div class="col-lg-6 p-5 align-content-start mt-0 justify-content-between">
+                            <p class="font-italic text-black">"Před prvním tréninkem jsem vůbec netušila, co mě čeká.
+                                Myslela jsem si, že jsem spíš jen takový ten ztracený případ, co přeplave bazén a
+                                neutopí se při tom, tak jsem ani nepředpokládala, že by na mém "umění" bylo co zlepšovat.
+                                A bylo - dokonce tak, že mě to skutečně nadchlo! Především mě nadchl přístup trenéra
+                                Dominika, který měl pro mně jen slova povzbuzení, a věděl přesně, na co v mém případě
+                                zacílit. Teď se normálně těším na každou návštěvu bazénu, až budu zkoušet, co jsem se
+                                naučila  :-)"</p>
+                            <p class="text-muted ref-name">Sylva J.</p>
+                        </div>
+                        <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
+                            <img src="static/images/references/sylva.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
+                                 title="Tades V Foto"
+                                 alt="Tades V Foto" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+              </div>
+                <div class="carousel-item pt-5">
+                <div class="container">
+                    <div class="carousel-caption row flex-lg-row align-items-center g-5 justify-content-center pt-0">
+                        <div class="col-lg-6 p-5 align-content-start mt-0 justify-content-between">
+                            <p class="font-italic text-black">"Trenér byl velice milý a bylo opravdu vidět, že je
+                                profesionál a má roky zkušeností. Velmi mě jeho přístup potešil, znalyzoval moji
+                                techniku a poradil, jak a co zlepšit. Moje zkušenost byla velice pozitivní a do
+                                budoucna zvážím soukromé tréninky, které by byly rozhodně obrovským přínosem a
+                                zlepšením mé plavecké techniky."</p>
+                            <p class="text-muted ref-name">Jirka K.</p>
+                        </div>
+                        <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
+                            <img src="static/images/references/jirka.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Tades V Foto"
                                  alt="Tades V Foto" loading="lazy">
                         </div>
@@ -353,7 +395,7 @@
 <div id="contact" class="container col-xxl-10 px-4 py-4">
     <div class="row flex-lg-row align-items-center g-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6 p-5">
-            <img src="static/images/contact_logo.webp" class="d-block mx-lg-auto img-fluid section-image" title="Element Swimming"
+            <img src="static/images/main/contact_logo.webp" class="d-block mx-lg-auto img-fluid section-image" title="Element Swimming"
                  alt="Logo Element Swimming velké" loading="lazy">
         </div>
         <div class="col-lg-6">
@@ -415,7 +457,7 @@
             Sláma</a></p>
 
         <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <img src="static/images/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
+            <img src="static/images/main/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
         </a>
 
         <ul class="col-12 nav col-md-4 footer-nav">
