Fix reference text

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="carousel-caption row flex-lg-row align-items-center g-5 justify-content-center pt-0">
                         <div class="col-lg-6 p-5 align-content-start mt-0 justify-content-between">
                             <p class="font-italic text-black">"Trenér byl velice milý a bylo opravdu vidět, že je
-                                profesionál a má roky zkušeností. Velmi mě jeho přístup potešil, znalyzoval moji
+                                profesionál a má roky zkušeností. Velmi mě jeho přístup potešil, zanalyzoval moji
                                 techniku a poradil, jak a co zlepšit. Moje zkušenost byla velice pozitivní a do
                                 budoucna zvážím soukromé tréninky, které by byly rozhodně obrovským přínosem a
                                 zlepšením mé plavecké techniky."</p>
