Disable lazy loading

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="col-lg-7 p-0">
             <img src="static/images/main/home_photo.webp" class="img-fluid rounded-5 mb-4 section-image" title="Úvodní foto"
-                 alt="Úvodní foto" loading="lazy">
+                 alt="Úvodní foto">
         </div>
     </div>
 </div>
@@ -127,7 +127,7 @@
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6">
             <img src="static/images/main/pan_trener.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
-                 title="Trenér plavání Dominik Vavrečka" alt="Trenér plavání Dominik Vavrečka" loading="lazy">
+                 title="Trenér plavání Dominik Vavrečka" alt="Trenér plavání Dominik Vavrečka">
         </div>
         <div class="col-lg-6">
             <p class="display-5 fw-bold lh-1 py-3">O nás</p>
@@ -295,7 +295,7 @@
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/bara.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Bara K Foto"
-                                 alt="Bara K Foto" loading="lazy">
+                                 alt="Bara K Foto">
                         </div>
                     </div>
                 </div>
@@ -312,7 +312,7 @@
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/eva.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Eva S Foto"
-                                 alt="Eva S Foto" loading="lazy">
+                                 alt="Eva S Foto">
                         </div>
                     </div>
                 </div>
@@ -333,7 +333,7 @@
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/tadeas.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Tades V Foto"
-                                 alt="Tades V Foto" loading="lazy">
+                                 alt="Tades V Foto">
                         </div>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/sylva.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Tades V Foto"
-                                 alt="Tades V Foto" loading="lazy">
+                                 alt="Tades V Foto">
                         </div>
                     </div>
                 </div>
@@ -373,7 +373,7 @@
                         <div class="col-10 col-sm-8 col-lg-6 mt-0 pb-5 pt-5 ref-image">
                             <img src="static/images/references/jirka.webp" class="d-block mx-lg-auto section-image rounded-5 m-width-ref-image shadow-lg img-fluid"
                                  title="Tades V Foto"
-                                 alt="Tades V Foto" loading="lazy">
+                                 alt="Tades V Foto">
                         </div>
                     </div>
                 </div>
@@ -396,7 +396,7 @@
     <div class="row flex-lg-row align-items-center g-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6 p-5">
             <img src="static/images/main/contact_logo.webp" class="d-block mx-lg-auto img-fluid section-image" title="Element Swimming"
-                 alt="Logo Element Swimming velké" loading="lazy">
+                 alt="Logo Element Swimming velké">
         </div>
         <div class="col-lg-6">
             <p class="display-5 fw-bold lh-1 mb-3">Kontakt</p>
