Add new cooperation-logo

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 <div class="container col-xxl-10 px-4 border-bottom" id="cooperation">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-3 align-items-center fill justify-content-center">
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.kpsostrava.cz">
-            <img src="static/images/cooperation/kpsos.webp" title="Klub Plaveckých Sportů Ostrava, KPSOS" alt="Klub Plaveckých Sportů Ostrava, KPSOS - Logo" class="bi me-2"
-                 width="200"/>
+            <img src="static/images/cooperation/kpsos.webp" title="Klub Plaveckých Sportů Ostrava, KPSOS"
+                 alt="Klub Plaveckých Sportů Ostrava, KPSOS - Logo" class="bi me-2" width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.vsc.cz">
             <img src="static/images/cooperation/victoria.webp" title="Vysokoškolské sportovní centrum Ministerstva školství, mládeže a tělovýchovy, Victoria"
@@ -172,6 +172,10 @@
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.fitnessclinic.cz">
             <img src="static/images/cooperation/fitness_clinic.webp" title="Fitness Clinic"
                  alt="Fitness Clinic - Logo" class="bi me-2" width="200"/>
+        </a>
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.fyzioterapeut-ostrava.cz">
+            <img src="static/images/cooperation/fyz_ostrava_white.jpg" title="Fyzioterapeut Ostrava"
+                 alt="Fyzioterapeut Ostrava - Logo" class="bi me-2" width="200"/>
         </a>
     </div>
 </div>
