--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                  alt="Fitness Clinic - Logo" class="bi me-2" width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.fyzioterapeut-ostrava.cz">
-            <img src="static/images/cooperation/fyz_ostrava_white.jpg" title="Fyzioterapeut Ostrava"
+            <img src="static/images/cooperation/fyz_ostrava.webp" title="Fyzioterapeut Ostrava"
                  alt="Fyzioterapeut Ostrava - Logo" class="bi me-2" width="200"/>
         </a>
     </div>
